# labelimg2

./: .gitignore  Manifest.in  README.md  pyproject.toml  requirements.txt
src/labelimg2/: main.py
src/labelimg2/libs/: resources.py
src/labelimg2/mixins/: window.py
