[project]
name = "labelimg2"
version = "0.0.1"
authors = [
  { name="yusef", email="yusef314159@gmail.com" },
]
description = "LabelImg v2"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["PyQt5 ~= 5.15.6", "lxml ~= 4.9.1"]

[project.urls]
"Homepage" = "https://github.com/mexusef/labelimg"
"Bug Tracker" = "https://github.com/mexusef/labelimg/issues"
